# PyGoETools

./: .gitignore  LICENSE  config.py  pyproject.toml
pygoetools/: __main__.py  goe_tools.py
tests/: test___main__.py  test_goe_tools.py
